# big_proj

./: .gitignore  README.md  main.py  pyproject.toml
model/: model.py
tg_bot/: config.py  middlelwares.py  run.py
tg_bot/handlers/: handlers.py
tg_bot/keyboards/: __init__.py  keyboards.py
tg_bot/middlewares/: __init__.py  async_timed_queue.py  middlelwares.py
