[project]
name = "text-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "Darya Rabotyazheva"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "torch (>=2.0,<2.9)",
    "openai (>=2.5.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
